--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,7 +51,10 @@ dependencies = [
 [project.optional-dependencies]
 nengo = [
     "nengo>=4.1.0",
-    "nengo-gui",
+    "nengo-gui>=0.6.0",
+    "beautifulsoup4>=4.12.3",
+    "soupsieve>=2.8",
+    "nengo-spa>=2.0.0",
 ]
 dev = [
     "pytest>=8.3.4",
