--- a/pyproject.toml
+++ b/pyproject.toml
@@ -55,6 +55,7 @@ nengo = [
     "beautifulsoup4>=4.12.3",
     "soupsieve>=2.8",
     "nengo-spa>=2.0.0",
+    "sortedcontainers>=2.4.0",
 ]
 dev = [
     "pytest>=8.3.4",
